--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,12 @@
     "configurations": [
         {
             "type": "node",
+            "request": "launch",
+            "name": "Launch Program",
+            "program": "${workspaceFolder}/server/index.js"
+        },
+        {
+            "type": "node",
             "request": "attach",
             "name": "Docker",
             "address": "localhost",
